# mbed-client-classic

./: Makefile.test  README.md
mbed-client-classic/: m2mconnectionhandlerpimpl.h
source/: m2mconnectionhandlerpimpl.cpp  m2mtimerpimpl.cpp
test/mbed-client-classic/unittest/: makefile_defines.txt
test/mbed-client-classic/unittest/m2mconnectionhandlerimpl_classic/: CMakeLists.txt  Makefile  m2mconnectionhandlerimpl_classic_test.cpp  main.cpp  test_m2mconnectionhandlerimpl_classic.cpp  test_m2mconnectionhandlerimpl_classic.h
test/mbed-client-classic/unittest/m2mconnectionhandlerpimpl_classic/: CMakeLists.txt  Makefile  m2mconnectionhandlerpimpl_classic_test.cpp  main.cpp  test_m2mconnectionhandlerpimpl_classic.cpp  test_m2mconnectionhandlerpimpl_classic.h
test/mbed-client-classic/unittest/m2mtimer_classic/: Makefile
test/mbed-client-classic/unittest/m2mtimerpimpl_classic/: Makefile  m2mtimerpimpl_classic_test.cpp  main.cpp  test_m2mtimerpimpl_classic.cpp  test_m2mtimerpimpl_classic.h
test/mbed-client-classic/unittest/stub/: common_stub.cpp  eventOS_stub.cpp  eventOS_stub.h  m2mbase_stub.cpp  m2mbase_stub.h  m2mconnectionhandlerpimpl_stub.cpp  m2mconnectionsecurity_stub.cpp  m2mconnectionsecurity_stub.h  m2mobject_stub.cpp  m2mobject_stub.h  m2mresource_stub.cpp  m2mresource_stub.h  m2mresourceinstance_stub.cpp  m2mresourceinstance_stub.h  m2msecurity_stub.cpp  m2msecurity_stub.h  m2mtimerpimpl_stub.cpp  m2mtimerpimpl_stub.h  ns_hal_init_stub.cpp  pal_network_stub.cpp  pal_network_stub.h  pal_stub.cpp  pal_stub.h
